Use getReferenceById method to avoid looking up offerings
See https://thorben-janssen.com/jpa-getreference/